plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JSTL
	implementation 'jakarta.servlet:jakarta.servlet-api' //스프링부트 3.0 이상
	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //스프링부트 3.0 이상
	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// DATA VALIDATION
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'jakarta.validation:jakarta.validation-api'

	// DATABASE
	// JDBC API
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	// MYSQL DRIVER
	runtimeOnly 'com.mysql:mysql-connector-j'

	// THYMELEAF
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

	// MAIL
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// SPRING SECURITY
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// OAUTH2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// Thymeleaf Extras Springsecurity6
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'

	// 이미지 리사이징 을 위한 라이브러리
	implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

	// REDIS
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

tasks.named('test') {
	useJUnitPlatform()
}
